--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,7 @@ ci:
   # format compatible with commitlint
   autoupdate_commit_msg: "chore: pre-commit autoupdate"
   autoupdate_schedule: monthly
-  autofix_commit_msg: |
-    chore: auto fixes from pre-commit.com hooks
-
-    for more information, see https://pre-commit.ci
+  autofix_commit_msg: "chore: auto fixes from pre-commit.com hooks"
   skip:
     # https://github.com/pre-commit-ci/issues/issues/55
     - pip-compile
@@ -15,16 +12,15 @@ repos:
   - repo: meta
     hooks:
       - id: check-useless-excludes
-  - repo: https://github.com/pre-commit/mirrors-prettier
+  - repo: https://github.com/rbubley/mirrors-prettier
     # keep it before yamllint
-    rev: v4.0.0-alpha.8
+    rev: v3.5.1
     hooks:
       - id: prettier
         always_run: true
         additional_dependencies:
-          - prettier
-          - prettier-plugin-toml
-          - prettier-plugin-sort-json
+          - prettier@3.2.4
+          - prettier-plugin-sort-json@3.1.0
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v8.17.2
     hooks:
@@ -39,6 +35,11 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks.git
     rev: v5.0.0
     hooks:
+      - id: check-added-large-files
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: debug-statements
+      - id: detect-private-key
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: mixed-line-ending
@@ -64,26 +65,35 @@ repos:
         files: \.(yaml|yml)$
         types: [file, yaml]
         entry: yamllint --strict
-  - repo: https://github.com/PyCQA/isort
-    rev: 6.0.0
-    hooks:
-      - id: isort
-        args:
-          # https://github.com/pre-commit/mirrors-isort/issues/9#issuecomment-624404082
-          - --filter-files
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-      - id: black
-        language_version: python3
   - repo: https://github.com/asottile/pyupgrade
     # keep it after flake8
     rev: v3.19.1
     hooks:
       - id: pyupgrade
         args: ["--py39-plus"]
+  - repo: https://github.com/pappasam/toml-sort
+    rev: v0.24.2
+    hooks:
+      - id: toml-sort-fix
+        alias: toml
+
+  - repo: https://github.com/tox-dev/tox-ini-fmt
+    rev: 1.5.0
+    hooks:
+      - id: tox-ini-fmt
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.9.6
+    hooks:
+      - id: ruff
+        args:
+          - --fix
+          - --exit-non-zero-on-fix
+        types_or: [python, pyi]
+      # - id: ruff-format # must be after ruff
+      #   types_or: [python, pyi]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.14.1
+    rev: v1.15.0
     hooks:
       - id: mypy
         # empty args needed in order to match mypy cli behavior
@@ -96,29 +106,27 @@ repos:
         args:
           - --output-format=colorized
         additional_dependencies: ["mkdocs-macros-plugin"]
-  - repo: https://github.com/jazzband/pip-tools
-    rev: 7.4.1
+  - # keep at bottom as these are slower
+    repo: local
     hooks:
       - id: pip-compile
-        name: lock
+        name: Check constraints files and requirements
+        files: ^(pyproject\.toml|\.config/.*)$
+        language: python
+        language_version: "3.10" # minimal we support officially
+        entry: python3 -m uv pip compile -q --all-extras --output-file=.config/constraints.txt pyproject.toml
+        pass_filenames: false
+        additional_dependencies:
+          - uv>=0.5.21
+      - id: lock
+        name: Update requirements-lock.txt
         alias: lock
         always_run: true
-        entry: pip-compile --upgrade -q --no-annotate --output-file=.config/constraints.txt pyproject.toml --all-extras --strip-extras --unsafe-package ruamel-yaml-clib
-        files: ^.config\/requirements.*$
+        entry: python3 -m uv pip compile -q --upgrade --output-file=.config/requirements-lock.txt pyproject.toml --strip-extras
+        files: ^(pyproject\.toml|\.config/.*)$
         language: python
         language_version: "3.10" # minimal we support officially
         pass_filenames: false
         stages: [manual]
         additional_dependencies:
-          - pip>=22.3.1
-      - id: pip-compile
-        name: deps
-        alias: deps
-        always_run: true
-        entry: pip-compile -q --no-annotate --output-file=.config/constraints.txt pyproject.toml  --all-extras --strip-extras --unsafe-package ruamel-yaml-clib
-        files: ^.config\/requirements.*$
-        language: python
-        language_version: "3.10" # minimal we support officially
-        pass_filenames: false
-        additional_dependencies:
-          - pip>=22.3.1
+          - uv>=0.5.21
