--- a/tox.ini
+++ b/tox.ini
@@ -1,126 +1,119 @@
-# spell-checker:ignore linkcheck basepython changedir envdir envlist envname envsitepackagesdir passenv setenv testenv toxinidir toxworkdir usedevelop doctrees envpython posargs
 [tox]
 requires =
+    setuptools>=65.3
     tox>=4.11.4
-envlist =
-  lint
-  pkg
-  docs
-  py
-  devel
+    tox-extra>=2.1
+    tox-uv>=1.20.2
+env_list =
+    py
+    lint
+    pkg
+    docs
+    devel
 
 [testenv]
 description =
-  Run tests
-  devel: without constrained dependencies
-extras =
-  test
-passenv =
-  CURL_CA_BUNDLE  # https proxies, https://github.com/tox-dev/tox/issues/1437
-  FORCE_COLOR
-  HOME
-  NO_COLOR
-  PYTEST_*  # allows developer to define their own preferences
-  PYTEST_REQPASS  # needed for CI
-  PYTHON*  # PYTHONPYCACHEPREFIX, PYTHONIOENCODING, PYTHONBREAKPOINT,...
-  PY_COLORS
-  RTD_TOKEN
-  REQUESTS_CA_BUNDLE  # https proxies
-  SETUPTOOLS_SCM_DEBUG
-  SSL_CERT_FILE  # https proxies
-  SSH_AUTH_SOCK # may be needed by git when running with progressive
-  LANG
-  LC_*
-setenv =
-  COVERAGE_FILE = {envdir}/.coverage.{envname}
-  ; COVERAGE_PROCESS_START={toxinidir}/pyproject.toml
-  PIP_CONSTRAINT = {toxinidir}/.config/constraints.txt
-  devel,pkg: PIP_CONSTRAINT = /dev/null
-  PIP_DISABLE_PIP_VERSION_CHECK = 1
-  PRE_COMMIT_COLOR = always
-  FORCE_COLOR = 1
-allowlist_externals =
-  sh
-commands_pre =
-  sh -c "rm -f .coverage* coverage.xml 2>/dev/null || true"
-commands =
-  coverage run -m pytest {posargs}
-  sh -c "coverage combine -a -q --data-file={envdir}/.coverage {toxworkdir}/*/.coverage.* && coverage xml --data-file={envdir}/.coverage -o {envdir}/coverage.xml --fail-under=0 && coverage report --data-file={envdir}/.coverage"
+    Run tests
+    devel: without constrained dependencies
 package = editable
+extras =
+    test
+pass_env =
+    CI
+    CURL_CA_BUNDLE
+    FORCE_COLOR
+    HOME
+    LANG
+    LC_*
+    NO_COLOR
+    PYTEST_REQPASS
+    PYTHON*
+    PYTHONBREAKPOINT
+    PYTHONIOENCODING
+    PYTHONPYCACHEPREFIX
+    PY_COLORS
+    REQUESTS_CA_BUNDLE
+    RTD_TOKEN
+    SETUPTOOLS_SCM_DEBUG
+    SSH_AUTH_SOCK
+    SSL_CERT_FILE
+    UV_*
+set_env =
+    COVERAGE_FILE = {env_dir}/.coverage.{env_name}
+    COVERAGE_PROCESS_START = {tox_root}/pyproject.toml
+    FORCE_COLOR = 1
+    PIP_CONSTRAINT = {tox_root}/.config/constraints.txt
+    PIP_DISABLE_PIP_VERSION_CHECK = 1
+    PRE_COMMIT_COLOR = always
+    UV_CONSTRAINT = {tox_root}/.config/constraints.txt
+    deps, devel, lint, pkg: PIP_CONSTRAINT = /dev/null
+    deps, devel, lint, pkg: UV_CONSTRAINT = /dev/null
+commands_pre =
+    sh -c "rm -f {env_dir}/.coverage.* 2>/dev/null || true"
+commands =
+    coverage run -m pytest {posargs:}
+    {py,py310,py311,py312,py313}: sh -c "coverage combine -q --data-file={env_dir}/.coverage {env_dir}/.coverage.* && coverage xml --data-file={env_dir}/.coverage -o {env_dir}/coverage.xml --ignore-errors --fail-under=0 && COVERAGE_FILE={env_dir}/.coverage coverage lcov --fail-under=0 --ignore-errors -q && COVERAGE_FILE={env_dir}/.coverage coverage report --fail-under=0 --ignore-errors"
+allowlist_externals =
+    sh
+editable = true
 
 [testenv:lint]
 description = Run all linters
-# pip compile includes python version in output constraints, so we want to
-# be sure that version does not change randomly.
-basepython = python3.10
-deps =
-  pre-commit>=2.6.0
-  pre-commit-uv>=0.5.0
-  setuptools>=65.3.0
-  pytest>=7.2.0  # to updated schemas
+base_python = python3.10
 skip_install = true
-commands =
-  {envpython} -m pre_commit run --all-files --show-diff-on-failure {posargs:}
-passenv =
-  {[testenv]passenv}
-  PRE_COMMIT_HOME
-setenv =
-  {[testenv]setenv}
-  # avoid messing pre-commit with out own constraints
-  PIP_CONSTRAINT=
-[testenv:deps]
-description = Bump all test dependencies
-# we reuse the lint environment
-envdir = {toxworkdir}/lint
-skip_install = true
-basepython = python3.10
 deps =
-  {[testenv:lint]deps}
-setenv =
-  # without his upgrade would likely not do anything
-  PIP_CONSTRAINT = /dev/null
+    pre-commit>=4.0.1
+    pre-commit-uv>=4.1.4
+    pytest>=7.2.2  # to updated schemas
+    setuptools>=65.3
+pass_env =
+    {[testenv]pass_env}
+    PRE_COMMIT_HOME
+commands_pre =
 commands =
-  pre-commit run --all-files --show-diff-on-failure --hook-stage manual lock
-  # Update pre-commit hooks
-  pre-commit autoupdate
-  # We fail if files are modified at the end
-  git diff --exit-code
-
-[testenv:docs]
-description = Builds docs
-extras =
-  docs
-setenv =
-  # Disable colors until markdown-exec supports it:
-  # https://github.com/pawamoy/markdown-exec/issues/11
-  NO_COLOR = 1
-  TERM = dump
-skip_install = false
-usedevelop = true
-commands =
-  mkdocs build -v -c --strict --site-dir=_readthedocs/html/ {posargs:}
-  linkchecker -f linkcheckerrc _readthedocs/html/
+    {env_python} -m pre_commit run --all-files --show-diff-on-failure {posargs:}
 
 [testenv:pkg]
 description =
-  Build package, verify metadata, install package and assert behavior when ansible is missing.
-deps =
-  build >= 1.0.3
-  pip
-  twine >= 4.0.1
+    Build package, verify metadata, install package and assert behavior when ansible is missing.
 skip_install = true
-# Ref: https://twitter.com/di_codes/status/1044358639081975813
+deps =
+    build>=1.0.3
+    pip
+    twine>=4.0.1
 commands =
-  # build wheel and sdist using PEP-517
-  {envpython} -c 'import os.path, shutil, sys; \
-  dist_dir = os.path.join("{toxinidir}", "dist"); \
-  os.path.isdir(dist_dir) or sys.exit(0); \
-  print("Removing \{!s\} contents...".format(dist_dir), file=sys.stderr); \
-  shutil.rmtree(dist_dir)'
-  {envpython} -m build --outdir {toxinidir}/dist/ {toxinidir}
-  # Validate metadata using twine
-  twine check --strict {toxinidir}/dist/*
-  # Install the wheel
-  sh -c 'python3 -m pip install "mkdocs-ansible[lock] @ file://$(echo {toxinidir}/dist/*.whl)"'
-  # Uninstall it
-  python3 -m pip uninstall -y mkdocs-ansible
+    {env_python} -c 'import os.path, shutil, sys; \
+      dist_dir = os.path.join("{tox_root}", "dist"); \
+      os.path.isdir(dist_dir) or sys.exit(0); \
+      print("Removing \{!s\} contents...".format(dist_dir), file=sys.stderr); \
+      shutil.rmtree(dist_dir)'
+    {env_python} -m build --outdir {tox_root}/dist/ {tox_root}
+    twine check --strict {tox_root}/dist/*
+    sh -c 'python3 -m pip install "mkdocs-ansible[lock] @ file://$(echo {tox_root}/dist/*.whl)"'
+    python3 -m pip uninstall -y mkdocs-ansible
+
+[testenv:docs]
+description = Builds docs
+package = editable
+skip_install = false
+extras =
+    docs
+set_env =
+    DYLD_FALLBACK_LIBRARY_PATH = /opt/homebrew/lib:{env:LD_LIBRARY_PATH}
+    NO_COLOR = 1
+    TERM = dump
+commands =
+    mkdocs build -v -c --strict --site-dir=_readthedocs/html/ {posargs:}
+    linkchecker -f linkcheckerrc _readthedocs/html/
+
+[testenv:deps]
+description = Bump all test dependencies
+base_python = python3.10
+skip_install = true
+deps =
+    {[testenv:lint]deps}
+commands_pre =
+commands =
+    pre-commit run --all-files --show-diff-on-failure --hook-stage manual lock
+    pre-commit autoupdate
+env_dir = {work_dir}/lint
