--- a/.config/requirements-lock.txt
+++ b/.config/requirements-lock.txt
@@ -9,19 +9,15 @@ cffi==1.17.1              # via cairocffi
 charset-normalizer==3.4.1  # via requests
 click==8.1.8              # via mkdocs
 colorama==0.4.6           # via griffe, mkdocs-material
-coverage==7.6.12          # via mkdocs-ansible (pyproject.toml)
 csscompressor==0.9.5      # via mkdocs-minify-plugin
 cssselect2==0.7.0         # via cairosvg
 defusedxml==0.7.1         # via cairosvg
 dnspython==2.7.0          # via linkchecker
-exceptiongroup==1.2.2     # via pytest
-execnet==2.1.1            # via pytest-xdist
 ghp-import==2.1.0         # via mkdocs
 griffe==1.5.7             # via mkdocstrings-python
 hjson==3.1.0              # via mkdocs-macros-plugin, super-collections
 htmlmin2==0.1.13          # via mkdocs-minify-plugin
 idna==3.10                # via requests
-iniconfig==2.0.0          # via pytest
 jinja2==3.1.5             # via mkdocs, mkdocs-macros-plugin, mkdocs-material, mkdocstrings
 jsmin==3.0.1              # via mkdocs-minify-plugin
 linkchecker==10.5.0       # via mkdocs-ansible (pyproject.toml)
@@ -42,18 +38,14 @@ mkdocs-minify-plugin==0.8.0  # via mkdocs-ansible (pyproject.toml)
 mkdocs-monorepo-plugin==1.1.0  # via mkdocs-ansible (pyproject.toml)
 mkdocstrings==0.28.1      # via mkdocstrings-python, mkdocs-ansible (pyproject.toml)
 mkdocstrings-python==1.16.0  # via mkdocs-ansible (pyproject.toml)
-packaging==24.2           # via mkdocs, mkdocs-macros-plugin, pytest
+packaging==24.2           # via mkdocs, mkdocs-macros-plugin
 paginate==0.5.7           # via mkdocs-material
 pathspec==0.12.1          # via mkdocs, mkdocs-macros-plugin
 pillow==11.1.0            # via cairosvg, mkdocs-ansible (pyproject.toml)
 platformdirs==4.3.6       # via mkdocs-get-deps
-pluggy==1.5.0             # via pytest
 pycparser==2.22           # via cffi
 pygments==2.19.1          # via mkdocs-material
 pymdown-extensions==10.14.3  # via markdown-exec, mkdocs-material, mkdocstrings, mkdocs-ansible (pyproject.toml)
-pytest==8.3.4             # via pytest-plus, pytest-xdist, mkdocs-ansible (pyproject.toml)
-pytest-plus==0.8.1        # via mkdocs-ansible (pyproject.toml)
-pytest-xdist==3.6.1       # via mkdocs-ansible (pyproject.toml)
 python-dateutil==2.9.0.post0  # via ghp-import, mkdocs-macros-plugin
 python-slugify==8.0.4     # via mkdocs-monorepo-plugin
 pyyaml==6.0.2             # via mkdocs, mkdocs-get-deps, mkdocs-macros-plugin, pymdown-extensions, pyyaml-env-tag
@@ -66,7 +58,6 @@ super-collections==0.5.3  # via mkdocs-macros-plugin
 termcolor==2.5.0          # via mkdocs-macros-plugin
 text-unidecode==1.3       # via python-slugify
 tinycss2==1.4.0           # via cairosvg, cssselect2
-tomli==2.2.1              # via pytest
 typing-extensions==4.12.2  # via beautifulsoup4, mkdocstrings-python
 urllib3==2.3.0            # via requests
 watchdog==6.0.0           # via mkdocs
