--- a/.config/requirements.in
+++ b/.config/requirements.in
@@ -1,16 +1,16 @@
-cairosvg>=2.6.0
-linkchecker>=10.3.0
-markdown-exec>=1.3.0
+cairosvg>=2.7.1
+linkchecker>=10.5.0
+markdown-exec>=1.10.0
 markdown-include>=0.8.1
-mkdocs-gen-files>=0.4.0
-mkdocs-htmlproofer-plugin>=0.10.2
-mkdocs-macros-plugin
-mkdocs-material-extensions>=1.1.1
-mkdocs-material>=9.0.13
-mkdocs-minify-plugin>=0.6.2
-mkdocs-monorepo-plugin>=1.0.4
-mkdocs>=1.4.2
-mkdocstrings-python>=0.8.3
-mkdocstrings>=0.21.2
-pillow>=9.4.0
-pymdown-extensions>=9.9.2
+mkdocs-gen-files>=0.5.0
+mkdocs-htmlproofer-plugin>=1.3.0
+mkdocs-macros-plugin>=1.3.7
+mkdocs-material-extensions>=1.3.1
+mkdocs-material>=9.6.4
+mkdocs-minify-plugin>=0.8.0
+mkdocs-monorepo-plugin>=1.1.0
+mkdocs>=1.6.1
+mkdocstrings-python>=0.16.0
+mkdocstrings>=0.28.1
+pillow>=11.1.0
+pymdown-extensions>=10.14.3
