--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -2,12 +2,17 @@
 name: tox
 
 on:
+  merge_group:
+    branches:
+      - "main"
   push:
     branches:
       - "main"
   pull_request:
     branches:
       - "main"
+  schedule:
+    - cron: "0 0 * * *"
   workflow_call:
 
 concurrency:
