--- a/.config/requirements.in
+++ b/.config/requirements.in
@@ -1,4 +1,4 @@
-cairosvg>=2.7.1,<2.8.0 # temporary due to https://github.com/squidfunk/mkdocs-material/issues/8215
+cairosvg>=2.7.1
 linkchecker>=10.5.0
 markdown-exec>=1.10.0
 markdown-include>=0.8.1
@@ -6,7 +6,7 @@ mkdocs-gen-files>=0.5.0
 mkdocs-htmlproofer-plugin>=1.3.0
 mkdocs-macros-plugin>=1.3.7
 mkdocs-material-extensions>=1.3.1
-mkdocs-material>=9.6.4
+mkdocs-material>=9.6.13 # issue with cairosvg use in older versions
 mkdocs-minify-plugin>=0.8.0
 mkdocs>=1.6.1
 mkdocstrings-python>=0.16.0
