--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 requires =
     setuptools>=65.3
-    tox>=4.11.4
+    tox>=4.24.2
     tox-extra>=2.1
-    tox-uv>=1.20.2
+    tox-uv>=1.25
 env_list =
     py
     lint
@@ -26,6 +26,7 @@ pass_env =
     LANG
     LC_*
     NO_COLOR
+    PYTEST_*
     PYTEST_REQPASS
     PYTHON*
     PYTHONBREAKPOINT
@@ -52,17 +53,16 @@ commands_pre =
     sh -c "rm -f {env_dir}/.coverage.* 2>/dev/null || true"
 commands =
     coverage run -m pytest {posargs:}
-    {py,py310,py311,py312,py313}: sh -c "coverage combine -q --data-file={env_dir}/.coverage {env_dir}/.coverage.* && coverage xml --data-file={env_dir}/.coverage -o {env_dir}/coverage.xml --ignore-errors --fail-under=0 && COVERAGE_FILE={env_dir}/.coverage coverage lcov --fail-under=0 --ignore-errors -q && COVERAGE_FILE={env_dir}/.coverage coverage report --fail-under=0 --ignore-errors"
+    {py,py311,py312,py313}: sh -c "coverage combine -q --data-file={env_dir}/.coverage {env_dir}/.coverage.* && coverage xml --data-file={env_dir}/.coverage -o {env_dir}/coverage.xml --ignore-errors --fail-under=0 && COVERAGE_FILE={env_dir}/.coverage coverage lcov --fail-under=0 --ignore-errors -q && COVERAGE_FILE={env_dir}/.coverage coverage report --fail-under=0 --ignore-errors"
 allowlist_externals =
     sh
 editable = true
 
 [testenv:lint]
 description = Run all linters
-base_python = python3.10
 skip_install = true
 deps =
-    pre-commit>=4.0.1
+    pre-commit>=4.1
     pre-commit-uv>=4.1.4
     pytest>=7.2.2  # to updated schemas
     setuptools>=65.3
@@ -108,7 +108,6 @@ commands =
 
 [testenv:deps]
 description = Bump all test dependencies
-base_python = python3.10
 skip_install = true
 deps =
     {[testenv:lint]deps}
