--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=ansible_mkdocs-ansible
 sonar.organization=ansible
 sonar.sources=src/
 sonar.tests=test/
+sonar.python.coverage.reportPaths=**/coverage.xml
