--- a/.github/workflows/ack.yml
+++ b/.github/workflows/ack.yml
@@ -1,10 +1,17 @@
 ---
 # See https://github.com/ansible/team-devtools/blob/main/.github/workflows/ack.yml
 name: ack
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 on:
+  merge_group:
   pull_request_target:
     types: [opened, labeled, unlabeled, synchronize]
 
 jobs:
   ack:
     uses: ansible/team-devtools/.github/workflows/ack.yml@main
+    secrets: inherit
