--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,8 @@ ci:
   autoupdate_schedule: quarterly
   skip:
     # https://github.com/pre-commit-ci/issues/issues/55
-
-    - renovate-config-validator # container limits
+    - tombi-format
+    - tombi-lint
   submodules: true
 repos:
   - repo: meta
@@ -15,35 +15,34 @@ repos:
   - repo: https://github.com/astral-sh/uv-pre-commit
     rev: 0.9.2
     hooks:
+      - id: uv-sync
       - id: uv-lock
-        alias: lock
       - id: uv-lock
         name: "deps: upgrade via uv sync --upgrade"
         alias: deps
         args: ["--upgrade"]
         stages: [manual]
-  - repo: https://github.com/renovatebot/pre-commit-hooks
-    rev: 41.146.0
+  - repo: https://github.com/biomejs/pre-commit
+    rev: "v2.2.5"
     hooks:
-      - id: renovate-config-validator
-        alias: renovate
-        args: [--strict]
-  - repo: https://github.com/rbubley/mirrors-prettier
-    # keep it before yamllint
-    rev: v3.6.2
-    hooks:
-      - id: prettier
-        always_run: true
-        additional_dependencies:
-          - prettier@3.2.4
-          - prettier-plugin-sort-json@3.1.0
+      - id: biome-check
+        name: biome
+        alias: biome
+        args: [--unsafe]
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v9.2.0
     hooks:
       - id: cspell
-        # entry: codespell --relative
-        args: [--relative, --no-progress, --no-summary]
-        name: Spell check with cspell
+        entry: bash
+        pass_filenames: false
+        args:
+          [
+            "-euo",
+            "pipefail",
+            "-c",
+            "cspell-cli . --relative --no-progress --no-summary && cspell-cli . --disable-dictionary=words --no-exit-code --words-only --quiet --unique | LC_ALL=C sort > .config/dictionary.txt",
+          ]
+        name: cspell + remove unused and sort dictionary
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.34.0
     hooks:
@@ -87,33 +86,28 @@ repos:
     hooks:
       - id: pyupgrade
         args: ["--py39-plus"]
-  - repo: https://github.com/pappasam/toml-sort
-    rev: v0.24.3
+  - repo: https://github.com/tombi-toml/tombi-pre-commit
+    rev: v0.6.21
     hooks:
-      - id: toml-sort-fix
+      - id: tombi-format
         alias: toml
-
-  - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: 1.7.0
-    hooks:
-      - id: tox-ini-fmt
+      - id: tombi-lint
+        alias: toml
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.14.0
     hooks:
-      - id: ruff
-        args:
-          - --fix
-          - --exit-non-zero-on-fix
-        types_or: [python, pyi]
-      # - id: ruff-format # must be after ruff
-      #   types_or: [python, pyi]
+      - id: ruff-format
+        alias: ruff
+      - id: ruff-check
+        alias: ruff
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.18.2
     hooks:
       - id: mypy
-        # empty args needed in order to match mypy cli behavior
-        args: []
+        # "." and pass_files are used to make pre-commit mypy behave the same as standalone mypy
+        args: ["."]
+        pass_filenames: false
         additional_dependencies: ["mkdocs-macros-plugin"]
   - repo: https://github.com/pycqa/pylint
     rev: v3.3.9
