--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,14 @@
 # cspell: ignore junitxml
 
-# cspell: ignore junitxml
-[build-system]
-build-backend = "setuptools.build_meta"
-requires = [
-  "setuptools_scm[toml] >= 7.0.5", # required for "no-local-version" scheme
-  "setuptools >= 65.3.0"
-]
-
-[dependency-groups]
-dev = [
-  "coverage>=7.10.6",
-  "packaging>=25.0.0", # indirect
-  "pytest-plus>=0.8.1",
-  "pytest-xdist>=3.8.0",
-  "pytest>=8.4.2"
-]
-docs = ["mkdocs>=1.6.1"]
-lint = [
-  "pip>=25.2",
-  "pre-commit-uv>=4.1.4",
-  "pre-commit>=4.1",
-  "pytest>=7.2.2",
-  "setuptools>=51.1.1"
-]
-pkg = ["build>=1.3.0", "pip>=25.2", "pipx>=1.7.1", "twine>=4.0.1"]
-
 [project]
-authors = [{"email" = "info@ansible.com", "name" = "Ansible by Red Hat"}]
+name = "mkdocs-ansible"
+description = "Ansible MkDocs Theme based on mkdocs-material"
+readme = "docs/README.md"
+requires-python = ">=3.11"
+license = "MIT"
+authors = [{ "name" = "Ansible by Red Hat", "email" = "info@ansible.com" }]
+maintainers = [{ "name" = "Ansible by Red Hat", "email" = "info@ansible.com" }]
+keywords = ["ansible", "mkdocs", "theme"]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Web Environment",
@@ -37,9 +18,10 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Topic :: Documentation",
   "Topic :: Software Development :: Documentation",
-  "Topic :: Text Processing :: Markup :: HTML"
+  "Topic :: Text Processing :: Markup :: HTML",
 ]
 dependencies = [
   "cairosvg>=2.7.1",
@@ -47,35 +29,62 @@ dependencies = [
   "linkchecker>=10.5.0",
   "markdown-exec>=1.10.0",
   "markdown-include>=0.8.1",
+  "mkdocs>=1.6.1",
   "mkdocs-gen-files>=0.5.0",
   "mkdocs-htmlproofer-plugin>=1.3.0",
   "mkdocs-macros-plugin>=1.3.7",
-  "mkdocs-material-extensions>=1.3.1",
   "mkdocs-material>=9.6.13",
+  "mkdocs-material-extensions>=1.3.1",
   "mkdocs-minify-plugin>=0.8.0",
-  "mkdocs>=1.6.1",
-  "mkdocstrings-python>=0.16.0",
   "mkdocstrings>=0.28.1",
+  "mkdocstrings-python>=0.16.0",
   "pillow>=11.1.0",
-  "pymdown-extensions>=10.14.3"
+  "pymdown-extensions>=10.14.3",
 ]
-description = "Ansible MkDocs Theme based on mkdocs-material"
 dynamic = ["version"]
-keywords = ["ansible", "mkdocs", "theme"]
-license = "MIT"
-maintainers = [{"email" = "info@ansible.com", "name" = "Ansible by Red Hat"}]
-name = "mkdocs-ansible"
-readme = "docs/README.md"
-requires-python = ">=3.11"
-
-[project.entry-points."mkdocs.themes"]
-ansible = "mkdocs_ansible"
 
 [project.urls]
 changelog = "https://github.com/ansible/mkdocs-ansible/releases"
 documentation = "https://ansible.readthedocs.io/projects/mkdocs-ansible/"
 homepage = "https://github.com/ansible/mkdocs-ansible"
 repository = "https://github.com/ansible/mkdocs-ansible"
+
+[project.entry-points."mkdocs.themes"]
+ansible = "mkdocs_ansible"
+
+[dependency-groups]
+dev = [
+  "coverage>=7.10.6",  # indirect
+  "packaging>=25.0.0",
+  "pytest>=8.4.2",
+  "pytest-plus>=0.8.1",
+  "pytest-sugar>=1.1.1",
+  "pytest-xdist[psutil,setproctitle]>=2.1.0",
+  "pyyaml>=6.0.2",
+  "ruamel-yaml>=0.18.11",
+  "ruamel-yaml-clib>=0.2.12 ; python_full_version < '3.14'",
+  "tox>=4.24.2",
+  "tox-extra>=2.1",
+  "tox-uv>=1.25",
+  "types-jsonschema>=4.25.1.20250822",
+  "types-pyyaml>=6.0.12.20250822",
+]
+docs = ["mkdocs>=1.6.1"]
+lint = [
+  "pip>=25.2",
+  "pre-commit>=4.1",
+  "pre-commit-uv>=4.1.4",
+  "pytest>=7.2.2",
+  "setuptools>=51.1.1",
+]
+pkg = ["build>=1.3.0", "pip>=25.2", "twine>=4.0.1"]
+
+[build-system]
+requires = [
+  "setuptools_scm[toml] >= 7.0.5",  # required for "no-local-version" scheme
+  "setuptools >= 65.3.0",
+]
+build-backend = "setuptools.build_meta"
 
 [tool.codespell]
 # indention is a typo in ruamel.yaml's API
@@ -108,19 +117,36 @@ relative_files = true
 source = ["src"]
 
 [tool.mypy]
+check_untyped_defs = true
+color_output = true
+disallow_any_generics = true
+disallow_any_unimported = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+error_summary = true
 exclude = "(.config|build|dist|test/local-content|site-packages|~/.pyenv|examples/playbooks/collections|plugins/modules)"
+exclude_gitignore = true
 # https://github.com/python/mypy/issues/12664
+follow_untyped_imports = true
+incremental = false
+no_implicit_optional = true
 python_version = "3.11"
+show_error_code_links = true
 strict = true
+warn_redundant_casts = true
+warn_return_any = true
 warn_unused_configs = true
 
 [[tool.mypy.overrides]]
+ignore_errors = true
+ignore_missing_imports = true
 module = ["mkdocs_ansible._version"]
 warn_unused_ignores = false
 
 [[tool.mypy.overrides]]
+implicit_reexport = true
 module = ["mkdocs_ansible"]
-warn_unused_ignores = false # https://github.com/python/mypy/issues/13201
+warn_unused_ignores = false  # https://github.com/python/mypy/issues/13201
 
 [tool.pylint.MASTER]
 ignore-paths = "^src/.*/(_version|_vendor).*$"
@@ -158,7 +184,7 @@ git_describe_command = [
   "--long",
   "--tags",
   "--match",
-  "v*.*"
+  "v*.*",
 ]
 local_scheme = "no-local-version"
 tag_regex = "^(?P<prefix>v)?(?P<version>\\d+[^\\+]*)(?P<suffix>.*)?$"
@@ -183,10 +209,10 @@ commands = [
     "--show-diff-on-failure",
     "--hook-stage",
     "manual",
-    "deps"
+    "deps",
   ],
   ["pre-commit", "autoupdate"],
-  ["tox", "run", "-e", "lint"]
+  ["tox", "run", "-e", "lint"],
 ]
 commands_pre = []
 dependency_groups = ["lint"]
@@ -205,8 +231,8 @@ uv_sync_locked = false
 commands = [
   [
     "mkdocs",
-    {default = ["build", "--strict", "--site-dir=_readthedocs/html/"], extend = true, replace = "posargs"}
-  ]
+    { default = ["build", "--strict", "--site-dir=_readthedocs/html/"], extend = true, replace = "posargs" },
+  ],
 ]
 dependency_groups = ["docs"]
 description = "Builds docs"
@@ -237,9 +263,9 @@ commands = [
     "build",
     "--outdir",
     "{tox_root}/dist/",
-    "{tox_root}"
+    "{tox_root}",
   ],
-  ["sh", "-c", "python -m twine check --strict {tox_root}/dist/*"]
+  ["sh", "-c", "python -m twine check --strict {tox_root}/dist/*"],
 ]
 commands_pre = []
 dependency_groups = ["pkg"]
@@ -256,7 +282,7 @@ allowlist_externals = [
   "rm",
   "sh",
   "tox",
-  "{tox_root}/tools/report-coverage"
+  "{tox_root}/tools/report-coverage",
 ]
 commands = [
   [
@@ -266,15 +292,15 @@ commands = [
     "run",
     "-m",
     "pytest",
-    {default = [
+    { default = [
       "-ra",
       "--showlocals",
       "--doctest-modules",
       "--durations=10",
-      "--junitxml=./junit.xml"
-    ], extend = true, replace = "posargs"}
+      "--junitxml=./junit.xml",
+    ], extend = true, replace = "posargs" },
   ],
-  ["{tox_root}/tools/report-coverage"]
+  ["{tox_root}/tools/report-coverage"],
 ]
 commands_pre = [["sh", "-c", "rm -f {env_dir}/.coverage.* 2>/dev/null || true"]]
 description = """Run the tests: py{py_dot_ver}"""
@@ -300,7 +326,7 @@ pass_env = [
   "SETUPTOOLS_SCM_DEBUG",
   "SSH_AUTH_SOCK",
   "SSL_CERT_FILE",
-  "UV_*"
+  "UV_*",
 ]
 runner = "uv-venv-lock-runner"
 
