Update pyproject.toml with source_pkgs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,8 @@ branch = true
 concurrency = ["multiprocessing", "thread"]
 parallel = true
 relative_files = true
-source = ["src"]
+source_pkgs = ["mkdocs_ansible"]
+
 
 [tool.mypy]
 exclude = "(.config|build|dist|test/local-content|site-packages|~/.pyenv|examples/playbooks/collections|plugins/modules)"
